style.css
/* ... */
/* Home Page
--------------------------------------------- */
#home-logo{
	content: url("img/logos/home-logo.svg");
	height: 100%;
	max-height: 335px;
}

#tune-in-box{
	background: var(--transblack1);
	max-width: 600px;
	width: 90%;
	height: 335px;
}
#tune-in{
	font-family: "Porkys";
	width: 80%;
	height: 73px;
	font-style: normal;
	font-weight: 700;
	font-size: 350%;
	line-height: 86px;
	align-items: center;
	color: #FFFFFF;
	text-shadow: 5px 5px 4px var(--shadow);
	cursor:pointer;
}
#tune-in-box a{
	text-decoration: none;
}
@media (min-width: 992px){
	.h-lg-100{
		height:100%!important;
	}
}
@media (min-width: 768px){
	.h-md-50{
		height:50%!important;
	}
}
#current-bottom::-webkit-scrollbar {
	display: none;
  }
.spinitron{
	font-family: 'Europa Grotesk SH';
	color: white;
	display:flex;
	padding-bottom:40px;
    text-shadow: 3px 3px 1px var(--shadow);
	cursor:default;
}
#show-current a{
	text-decoration: none;
}
#time{
	padding-top:0px;
}
#show{
	color:var(--lpink);
	font-family: "Porkys";
	text-shadow: 3px 3px 2px rgba(253,12,114, 0.5);
	transition: 0.3s;
	cursor:pointer;
}
#show-off-air{
	color:var(--lpink);
	font-family: "Porkys";
	font-size:225%;
	text-shadow: 3px 3px 2px rgba(253,12,114, 0.5);
}
#show-upcoming{
	font-size:175%;
	transition: 0.3s;
	cursor:pointer;
}
#show:hover{
	transform: scale(1.2, 1.2) translate(10px, 0px);
}

#show-upcoming:hover{
	transform: scale(1.1, 1.1) translate(0px, 0px);
}

	/* Need to support 322px lowest width. This @media section ensures no text overlap*/
@media (min-width:940px){
	.spinitron{
		padding-top:18px;
		padding-bottom:0px;
	}
}

@media (min-width:768px){
	#show{
		font-size:225%;
	}
	#time{
		font-size:125%;
	}
	#song{
		font-size:175%;
	}
}
@media (max-width: 767.5px){
	#show{
		font-size:250%;
	}
	#time{
		font-size:150%;
	}
	#song{
		font-size:200%;
	}
}
@media(max-width:394px){
	#show{
		font-size:200%;
	}
	#time{
		font-size:100%;
	}
	#song{
		font-size:150%;
	}
}

#main-header{
	margin-bottom:200px;
}
#radio-toggle{
	max-height:186px;
	height:100%;
	display:flex;
	cursor:pointer;
	margin-top:3em;
}

@media (min-width: 768px){
	#radio-toggle{
		margin-top:0;
	}
}
.play-button{
	width: 186px;
    height: 186px;
}
.play-button2{
	content:url("img/logos/playbutton.png");
	width: 186px;
    height: 186px;
}

.pause-button{
	content:url("img/logos/pausebutton.svg");
	height:186px;
	width:186px;
}

#scroll-sec{
	padding-top:100px;
}
#scroll-text{
	font-family: 'Porkys';
	font-style: normal;
	font-weight: 700;
	font-size: 36px;
	width: 100%;
	max-height: 43px;
	color: var(--transblack2);
	text-shadow: 0px 4px 4px var(--shadow);
	cursor:default;
	transition: 0.3s;
}
#scroll{
	content: url("img/logos/home-scroll.svg");
	max-height: 77px;
	width: 100%;
	transition: 0.3s;
}
#scroll-text:hover{
	font-size:40px;
}
#insta-box{
	background: var(--transblack1);
}
#welcome{
	content:url("img/logos/home-welcomeksdt.svg");
	height:102px;
	width:100%;
}
#insta-container .row{
	margin-left: auto!important;
	margin-right: auto!important;
	padding-bottom:2rem;
	height:100%;
}
.insta-img-thumbnail{
	transition: 0.3s;
	cursor: pointer;
	background-color: rgba(0,0,0,0)!important;
}
.row div .insta-gallery-div{
	padding:30px!important;
}
@media(max-width:1600px){
	.row div .insta-gallery-div {
		padding:15px!important;
	}
}
.insta-img-thumbnail:hover{
	transform: scale(1.05, 1.05);
	opacity: 1!important;
}
.insta_svg_icon{
	display: none!important;
}
@media (max-width: 991px){
	.row div .insta-gallery-div {
		position: relative;
		width: 100%;
		min-height: 1px;
		max-width: 100%;
		flex: none;
	}
	.row div .insta-gallery-div {
		padding:20px!important;
	}
}
.instagram-video{
	display:none!important;
}

/* Broadcast
--------------------------------------------- */
.my-7{
	margin-top: 6em;
	margin-bottom: 6em;
}

@media (min-width: 576px){
	.w-sm-auto{
		width:auto!important;
	}
}

#played-recent{
	background-color: var(--transblack1);
	max-height: 936px;
    
}
#spin-recent{
	overflow-y: scroll;
	overflow-x: hidden;
	max-height: 680px;
}
#spin-recent::-webkit-scrollbar{
	width:8px;
}
#spin-recent::-webkit-scrollbar-track-piece{
	background-color:#BCB9AC;
	border-radius:10px;
	-webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.5); 
}
#spin-recent::-webkit-scrollbar-button{
	visibility:hidden;
	height:30px;
}
#spin-recent::-webkit-scrollbar-thumb{
	background-color:var(--yellow);
	width:8px;
	-webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.5); 
	border-radius:10px;
}

.recent-date{
	font-family: 'Europa Grotesk SH';
	color: white;
	font-size:32px;
	font-weight: 500;
}
.recent-artist{
	font-family: 'Europa Grotesk SH';
	color: white;
	font-size:32px;
	font-weight: 600;
	font-style:normal;
}
.recent-song{
	font-family: 'Europa Grotesk SH';
	color: white;
	font-size:32px;
	font-weight: 600;
	font-style: italic;
}

#playing-next-cont{
	background-color: var(--transblack1);
	max-height: 936px;
}
#playing-next{
	overflow-y: scroll;
	max-height: 673px;
    overflow-x: hidden;
}
#playing-next::-webkit-scrollbar{
	width:8px;
}
#playing-next::-webkit-scrollbar-track-piece{
	background-color:#BCB9AC;
	border-radius:10px;
	-webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.5); 
}
#playing-next::-webkit-scrollbar-button{
	visibility:hidden;
	height:30px;
}
#playing-next::-webkit-scrollbar-thumb{
	background-color:var(--yellow);
	width:8px;
	-webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.5); 
	border-radius:10px;
}
#spin-upcoming{
	padding-left: 10px;
}

.next-time{
	font-family: 'Europa Grotesk SH';
	color: white;
	font-size:32px;
	font-weight: 500;
}
#broadcast-wave{
	content:url("img/logos/broadcast-wave.svg");
	width: 103px;
    height: 39px;
}
.next-show{
	font-family: 'Europa Grotesk SH';
	color: white;
	font-size:32px;
	font-weight: 600;
	font-style: italic;
}
@media (min-width: 576px){
	.next-show{ white-space: nowrap; }
}
.next-show a{
	text-decoration: none;

}
/* ... */

